--- a/sass/layouts/layout_000/_section2.scss
+++ b/sass/layouts/layout_000/_section2.scss
@@ -98,27 +98,27 @@
         }
     
         .section2_1 {
-            background-image: url(../../../img/section2/photo-1.jpg);
+            background-image: url(../img/section2/photo-1.jpg);
         }
         
         .section2_2 {
-            background-image: url(../../../img/section2/photo-2.jpg);
+            background-image: url(../img/section2/photo-2.jpg);
         }
         
         .section2_3 {
-            background-image: url(../../../img/section2/photo-3.jpg);
+            background-image: url(../img/section2/photo-3.jpg);
         }
         
         .section2_4 {
-            background-image: url(../../../img/section2/photo-4.jpg);
+            background-image: url(../img/section2/photo-4.jpg);
         }
         
         .section2_5 {
-            background-image: url(../../../img/section2/photo-5.jpg);
+            background-image: url(../img/section2/photo-5.jpg);
         }
         
         .section2_6 {
-            background-image: url(../../../img/section2/photo-6.jpg);
+            background-image: url(../img/section2/photo-6.jpg);
         }
     
     }
