--- a/sass/layouts/layout_000/_section1.scss
+++ b/sass/layouts/layout_000/_section1.scss
@@ -98,27 +98,27 @@
         }
     
         .section1_1 {
-            background-image: url(../../../img/section1/photo-1.jpg);
+            background-image: url(../img/section1/photo-1.jpg);
         }
         
         .section1_2 {
-            background-image: url(../../../img/section1/photo-2.jpg);
+            background-image: url(../img/section1/photo-2.jpg);
         }
         
         .section1_3 {
-            background-image: url(../../../img/section1/photo-3.jpg);
+            background-image: url(../img/section1/photo-3.jpg);
         }
         
         .section1_4 {
-            background-image: url(../../../img/section1/photo-4.jpg);
+            background-image: url(../img/section1/photo-4.jpg);
         }
         
         .section1_5 {
-            background-image: url(../../../img/section1/photo-5.jpg);
+            background-image: url(../img/section1/photo-5.jpg);
         }
     
         .section1_6 {
-            background-image: url(../../../img/section1/photo-6.jpg);
+            background-image: url(../img/section1/photo-6.jpg);
         }
     
     }
