--- a/sass/layouts/layout_000/_section3.scss
+++ b/sass/layouts/layout_000/_section3.scss
@@ -98,31 +98,31 @@
         }
     
         .section3_1 {
-            background-image: url(../../../img/section3/photo-1.jpg);
+            background-image: url(../img/section3/photo-1.jpg);
         }
         
         .section3_2 {
-            background-image: url(../../../img/section3/photo-2.jpg);
+            background-image: url(../img/section3/photo-2.jpg);
         }
         
         .section3_3 {
-            background-image: url(../../../img/section3/photo-3.jpg);
+            background-image: url(../img/section3/photo-3.jpg);
         }
         
         .section3_4 {
-            background-image: url(../../../img/section3/photo-4.jpg);
+            background-image: url(../img/section3/photo-4.jpg);
         }
         
         .section3_5 {
-            background-image: url(../../../img/section3/photo-5.jpg);
+            background-image: url(../img/section3/photo-5.jpg);
         }
         
         .section3_6 {
-            background-image: url(../../../img/section3/photo-6.jpg);
+            background-image: url(../img/section3/photo-6.jpg);
         }
     
         .section3_7 {
-            background-image: url(../../../img/section3/photo-7.jpg);
+            background-image: url(../img/section3/photo-7.jpg);
         }
         
         .section3_8 {
