fixed route image

--- a/sass/layouts/layout_000/_section3.scss
+++ b/sass/layouts/layout_000/_section3.scss
@@ -126,15 +126,15 @@
         }
         
         .section3_8 {
-            background-image: url(../../../img/section3/photo-8.jpg);
+            background-image: url(../img/section3/photo-8.jpg);
         }
         
         .section3_9 {
-            background-image: url(../../../img/section3/photo-9.jpg);
+            background-image: url(../img/section3/photo-9.jpg);
         }
         
         .section3_10 {
-            background-image: url(../../../img/section3/photo-10.jpg);
+            background-image: url(../img/section3/photo-10.jpg);
         }
     
     }
