--- a/sass/layouts/layout_576/_section2.scss
+++ b/sass/layouts/layout_576/_section2.scss
@@ -10,12 +10,12 @@
         // также можно grid-auto-rows: 370px;
         
         .section2_3 {
-            background-image: url(../../../img/section2/photo-3.jpg);
+            background-image: url(../img/section2/photo-3.jpg);
             grid-row: span 2;
         }
         
         .section2_4 {
-            background-image: url(../../../img/section2/photo-4.jpg);
+            background-image: url(../img/section2/photo-4.jpg);
             grid-row: span 2;
         }
     
