--- a/sass/layouts/layout_576/_section3.scss
+++ b/sass/layouts/layout_576/_section3.scss
@@ -11,18 +11,18 @@
     
         
         .section3_2 {
-            background-image: url(../../../img/section3/photo-2.jpg);
+            background-image: url(../img/section3/photo-2.jpg);
             grid-row: span 2;
         }
         
         
         .section3_5 {
-            background-image: url(../../../img/section3/photo-5.jpg);
+            background-image: url(../img/section3/photo-5.jpg);
             grid-row: span 2;
         }
         
         .section3_6 {
-            background-image: url(../../../img/section3/photo-6.jpg);
+            background-image: url(../img/section3/photo-6.jpg);
             grid-row: span 2;
         }
     
