--- a/sass/layouts/layout_992/_section2.scss
+++ b/sass/layouts/layout_992/_section2.scss
@@ -30,22 +30,22 @@
         
 
         .section2_2 {
-            background-image: url(../../../img/section2/photo-2.jpg);
+            background-image: url(../img/section2/photo-2.jpg);
             grid-column: span 2;
         }
         
         .section2_3 {
-            background-image: url(../../../img/section2/photo-3.jpg);
+            background-image: url(../img/section2/photo-3.jpg);
             grid-row: span 2;
             grid-column: span 2;
         }
         
         .section2_4 {
-            background-image: url(../../../img/section2/photo-4.jpg);
+            background-image: url(../img/section2/photo-4.jpg);
             grid-row: span 2;
         }
         .section2_5 {
-            background-image: url(../../../img/section2/photo-5.jpg);
+            background-image: url(../img/section2/photo-5.jpg);
             grid-column: span 2;
         }
     
