--- a/sass/layouts/layout_576/_section2.scss
+++ b/sass/layouts/layout_576/_section2.scss
@@ -9,16 +9,15 @@
         grid-template-rows: repeat(8, 370px);
         // также можно grid-auto-rows: 370px;
         
-        .section2_3 {
+        .grid-photo__item:nth-of-type(3) {
             background-image: url(../img/section2/photo-3.jpg);
             grid-row: span 2;
         }
-        
-        .section2_4 {
+
+        .grid-photo__item:nth-of-type(4) {
             background-image: url(../img/section2/photo-4.jpg);
             grid-row: span 2;
         }
-    
     }
 }
 
