--- a/sass/layouts/layout_000/_general.scss
+++ b/sass/layouts/layout_000/_general.scss
@@ -8,3 +8,14 @@
     margin: 0 auto;
     padding: 0 15px;
 }
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
