--- a/sass/layouts/layout_000/_section1.scss
+++ b/sass/layouts/layout_000/_section1.scss
@@ -95,32 +95,31 @@
                     color: $greyData;
                 }
             }
+
+            &:nth-of-type(1) {
+                background-image: url(../img/section1/photo-1.jpg);
+            }
+
+            &:nth-of-type(2) {
+                background-image: url(../img/section1/photo-2.jpg);
+            }
+
+            &:nth-of-type(3) {
+                background-image: url(../img/section1/photo-3.jpg);
+            }
+
+            &:nth-of-type(4) {
+                background-image: url(../img/section1/photo-4.jpg);
+            }
+
+            &:nth-of-type(5) {
+                background-image: url(../img/section1/photo-5.jpg);
+            }
+
+            &:nth-of-type(6) {
+                background-image: url(../img/section1/photo-6.jpg);
+            }
         }
-    
-        .section1_1 {
-            background-image: url(../img/section1/photo-1.jpg);
-        }
-        
-        .section1_2 {
-            background-image: url(../img/section1/photo-2.jpg);
-        }
-        
-        .section1_3 {
-            background-image: url(../img/section1/photo-3.jpg);
-        }
-        
-        .section1_4 {
-            background-image: url(../img/section1/photo-4.jpg);
-        }
-        
-        .section1_5 {
-            background-image: url(../img/section1/photo-5.jpg);
-        }
-    
-        .section1_6 {
-            background-image: url(../img/section1/photo-6.jpg);
-        }
-    
     }
 }
 
