--- a/sass/layouts/layout_000/_section3.scss
+++ b/sass/layouts/layout_000/_section3.scss
@@ -95,48 +95,47 @@
                     color: $greyData;
                 }
             }
+
+            &:nth-of-type(1) {
+                background-image: url(../img/section3/photo-1.jpg);
+            }
+
+            &:nth-of-type(2) {
+                background-image: url(../img/section3/photo-2.jpg);
+            }
+
+            &:nth-of-type(3) {
+                background-image: url(../img/section3/photo-3.jpg);
+            }
+
+            &:nth-of-type(4) {
+                background-image: url(../img/section3/photo-4.jpg);
+            }
+
+            &:nth-of-type(5) {
+                background-image: url(../img/section3/photo-5.jpg);
+            }
+
+            &:nth-of-type(6) {
+                background-image: url(../img/section3/photo-6.jpg);
+            }
+
+            &:nth-of-type(7) {
+                background-image: url(../img/section3/photo-7.jpg);
+            }
+
+            &:nth-of-type(8) {
+                background-image: url(../img/section3/photo-8.jpg);
+            }
+
+            &:nth-of-type(9) {
+                background-image: url(../img/section3/photo-9.jpg);
+            }
+
+            &:nth-of-type(10) {
+                background-image: url(../img/section3/photo-10.jpg);
+            }
         }
-    
-        .section3_1 {
-            background-image: url(../img/section3/photo-1.jpg);
-        }
-        
-        .section3_2 {
-            background-image: url(../img/section3/photo-2.jpg);
-        }
-        
-        .section3_3 {
-            background-image: url(../img/section3/photo-3.jpg);
-        }
-        
-        .section3_4 {
-            background-image: url(../img/section3/photo-4.jpg);
-        }
-        
-        .section3_5 {
-            background-image: url(../img/section3/photo-5.jpg);
-        }
-        
-        .section3_6 {
-            background-image: url(../img/section3/photo-6.jpg);
-        }
-    
-        .section3_7 {
-            background-image: url(../img/section3/photo-7.jpg);
-        }
-        
-        .section3_8 {
-            background-image: url(../img/section3/photo-8.jpg);
-        }
-        
-        .section3_9 {
-            background-image: url(../img/section3/photo-9.jpg);
-        }
-        
-        .section3_10 {
-            background-image: url(../img/section3/photo-10.jpg);
-        }
-    
     }
 }
 
